--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <div class="row-fluid">
         <div class="span12">
           <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 20{{ site.time | date: "%y" }} Max4U | Max4u is een onderdeel van Second Opinion BV | AFM nr 12012455</p>
+          <p>&copy; 20{{ site.time | date: "%y" }} WOZ experts | WOZ experts is een onderdeel van Florissant Wonen</p>
         </div>
       </div>
     </div>
