--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -16,13 +16,13 @@
           <div class="nav-collapse collapse">
             <ul class="nav pull-right">
               <li class="active"><a href="index.html">Home</a></li>
-               <li><a href="bespaarconcept.html">Ons bespaarconcept</a></li>
-              <li><a href="bespaarconcept.html#wie">Over ons</a></li>
-              <li><a href="faq.html">Veelgestelde vragen</a></li>
+               <li><a href="#">Onze werkwijze</a></li>
+              <li><a href="#">Over ons</a></li>
+              <li><a href="#">Veelgestelde vragen</a></li>
           
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
               <li>
-                <a href="contact.php">Contact</a>
+                <a href="#">Contact</a>
               </li>
             </ul>
           </div><!--/.nav-collapse -->
