--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,13 +27,14 @@
 
     
   <script src="{{site.url}}/js/vendor/jquery-1.8.2.min.js"></script>
-        <link rel="stylesheet" href="less/style.css">
+        <!--<link rel="stylesheet" href="less/style.css">-->
 
-  <!--<link rel="stylesheet/less" href="less/style.less">
-  <script src="{{site.url}}/js/libs/less-1.3.0.min.js"></script>-->
+  <link rel="stylesheet/less" href="less/style.less">
+  <script src="{{site.url}}/js/libs/less-1.3.0.min.js"></script>
 
   <!-- Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,800,700,600,300' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Nunito:400,700,300' rel='stylesheet' type='text/css'>
 
    <script src="{{site.url}}/js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
 
