--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,31 @@
+
+<section id="pre-footer">
+  <div class="container center">
+    <div class="row-fluid">
+      <div class="span12">
+        <h3>Een persoonlijk, zorgvuldig en deskundig bezwaar?</h3>
+        <div class="row-fluid">
+          <div class="span3">
+          </div>
+          <div class="span6">
+            <h5>Meldt u nu aan en wij starten <strong>direct</strong> een kosteloze WOZ bezwaarprocedure voor u op.
+            </h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row-fluid btns">
+      <div class="span2">
+      </div>
+      <div class="span4">
+        <a href="aanmelden.php" class="btn btn-primary btn-large btn-block">direct aanmelden</a>
+      </div>
+      <div class="span4">
+        <a href="" class="btn btn-info btn-large btn-block">lees meer over onze werkwijze</a>
+      </div>
+    </div>
+  </div>
+</section>
  
 
   <!-- FOOTER -->
