--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -22,7 +22,7 @@
           
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
               <li>
-                <a href="#">contact</a>
+                <a href="contact.php">contact</a>
               </li>
             </ul>
           </div><!--/.nav-collapse -->
