Update naar WOZ controledienst

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
         <a href="aanmelden.php" class="btn btn-primary btn-large btn-block">direct aanmelden</a>
       </div>
       <div class="span4">
-        <a href="" class="btn btn-info btn-large btn-block">lees meer over onze werkwijze</a>
+        <a href="werkwijze.html" class="btn btn-info btn-large btn-block">lees meer over onze werkwijze</a>
       </div>
     </div>
   </div>
@@ -34,7 +34,7 @@
       <div class="row-fluid">
         <div class="span12">
           <p class="pull-right"><a href="#">Back to top</a></p>
-          <p>&copy; 20{{ site.time | date: "%y" }} WOZ experts | WOZ experts is een onderdeel van Florissant Wonen</p>
+          <p>&copy; 20{{ site.time | date: "%y" }} WOZcontroledienst | WOZcontroledienst is een onderdeel van Florissant Wonen</p>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-38678896-1']);
+  _gaq.push(['_setAccount', 'UA-39007202-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
